--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Heading for the document</h1>
+	<p>First paragraph explaining Time Complexity</p>
+	<p>Second paragraph explaining Space Complexity</p>
+	<p>Bold text within the second paragraph</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
