--- a/main.html
+++ b/main.html
@@ -8,10 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Heading for the document</h1>
-	<p>First paragraph explaining Time Complexity</p>
-	<p>Second paragraph explaining Space Complexity</p>
-	<p>Bold text within the second paragraph</p>
+	<h1>Time, Space, Complexity</h1>
+
+	<p>Time complexity, efficient</p>
+
+	<p><b>Space Complexity,</b> O(n)</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
